[tool.poetry]
name = "nonebot_plugin_hammer_maij"
version = "1.0.1"
description = "A Nonebot2 plugin implements MaiJ API, which helps MaimaiDX players share the information of game zones."
authors = ["ArgonarioD <argonariod@outlook.com>"]
repository = "https://github.com/ArgonarioD/nonebot-plugin-hammer-maij"
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "nonebot_plugin_hammer_maij"}]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9"
]

[tool.poetry.dependencies]
python = "^3.9"
nonebot-plugin-hammer-core = "^0.3.2"
httpx = "^0.24.1"
nonebot-plugin-localstore = "^0.5.0"

[tool.poetry.extras]
onebot = ["nonebot-adapter-onebot"]

[tool.poetry.group.test.dependencies]
nonebug = "^0.3.4"
pytest-asyncio = "^0.21.0"
nonebot-adapter-console = "^0.3.2"
nonebot2 = {extras = ["fastapi"], version = "^2.0.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
